--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -21,5 +21,5 @@
     "numRoots": "Количество найденных корней:",
     "rootsDescription": "Отслеживайте, сколько корней еще предстоит найти!",
     "drawing": "Используйте ОДИН палец, чтобы управлять углом наклона луча и ДВА пальца, чтобы перемещать его по экрану! Для изменения масштаба используйсте двойное нажатие на левую / правую половину экрана.",
-    "hasComplexRoots": "Осторожно! Среди решений уравнения есть комплексные, которые Вы пока не сможете увидеть на рисунке, используя текущий метод."
+    "hasComplexRoots": "Осторожно! Среди решений уравнения есть комплексные."
 }
