fixed problem with finding roots

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -71,7 +71,7 @@
     "@congrats": {
         "description": ""
     },
-    "allRoots": "Yahoo! You have found all the roots!",
+    "allRoots": "Yahoo! You have found all the real roots!",
     "@allRoots": {
         "description": ""
     },
