--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -17,7 +17,7 @@
     "pOfX": "Значение полинома в точке X. Постарайтесь сделать это значение как можно ближе к нулю!",
     "error": "Сначала нужно ввести все коэффициенты!",
     "congrats": "Ура! \nВы нашли корень: x = ",
-    "allRoots": "Отлично! Вы нашли все корни многочлена!",
+    "allRoots": "Отлично! Вы нашли все вещественные корни многочлена!",
     "numRoots": "Количество найденных корней:",
     "rootsDescription": "Отслеживайте, сколько корней еще предстоит найти!",
     "drawing": "Используйте ОДИН палец, чтобы управлять углом наклона луча и ДВА пальца, чтобы перемещать его по экрану! Для изменения масштаба используйсте двойное нажатие на левую / правую половину экрана.",
