--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,16 +1,20 @@
 {
     "language": "Русский",
     "run": "ЗАПУСК",
-    "page1latex": "РЕШАЙТЕ КУБИЧЕСКИЕ УРАВНЕНИЯ С ПОМОЩЬЮ ЛАЗЕРА И ЧЕРЕПАХИ!",
-    "page1text": "Как это работает? Метод Лиля!",
-    "page2latex": "ЧЕРЕПАХА РИСУЕТ ТРАЕКТОРИЮ ПО ЗАДАННЫМ КОЕФФИЦИЕНТАМ",
-    "page2text": "Угол наклона лазера определяет точку x, а расстояние от конца луча до конца траектории - значение полинома в этой точке.",
-    "page3latex": "Направьте лазер так, чтобы расстояние было равно нулю!",
-    "page3text": "А вы сможете найти все решения?",
-    "page4latex": "Направьте лазер так, чтобы расстояние было равно нулю!",
-    "page4text": "А вы сможете найти все решения?",
-    "page5latex": "Направьте лазер так, чтобы расстояние было равно нулю!",
-    "page5text": "А вы сможете найти все решения?",
+    "page1latex": "Визуализируйте действительные и комплексные решения уравнений второй и третьей степени с помощью метода Лиля.",
+    "page1text": "",
+    "page2latex": "Коэффициенты изображаются в виде прямых линий (черная линия), где каждый коэффициент расположен под прямым углом к ​​предыдущему, последовательно против часовой стрелки.",
+    "page2text": "Красная линия дает действительные решения, если она пересекает <h4>сегмент b</h4> с отрицательными решениями слева и положительными справа относительно <h4>сегмента a.</h4>",
+    "page6latex": "<h3>$$Некоторые \\, сведения $$</h3> Уравнения нечетной степени всегда имеют одно действительное решение. Уравнения четной степени могут не иметь действительного решения. Но если они есть, то будут встречаться парами.",
+    "page6text": "<h4>Любое уравнение можно разделить на его первый коэффициент. Поэтому отрезок, соответствующий первому коэффициенту, будет по умолчанию иметь длину 1.</h4>",
+    "page3latex": "Действительная часть комплексного решения равна <h4>(-b / 2).</h4> Комплексные части являются пересечениями желтого круга с прямой <h4>(x = -b / 2).</h4> Желтый круг построен на точках пересечения синего круга (диаметр которого равен (a + c)) с <h4>сегментом b.</h4>",
+    "page3text": "",
+    "page7latex": "Траекторию решения кубического уравнения можно рассматривать как траекторию, соответствующую квадратному уравнению, и использовать для нахождения двух комплексных корней, если они существуют, после обнаружении одного действительного корня.",
+    "page7text": "",
+    "page4latex": "Хотите разобраться подробнее? Список использованных ресурсов:",
+    "page4text": "",
+    "page5latex": "Действительные решения представляют собой пересечения круга, построенного между начальной и конечной точками, и <h4>сегмента b.</h4>",
+    "page5text": "",
     "coefficients": "Введите коэффициенты уравнения",
     "startButton": "Построить траекторию!",
     "xPoint": "Точка меняется при изменении наклона угла луча",
@@ -19,7 +23,10 @@
     "congrats": "Ура! \nВы нашли корень: x = ",
     "allRoots": "Отлично! Вы нашли все вещественные корни многочлена!",
     "numRoots": "Количество найденных корней:",
-    "rootsDescription": "Отслеживайте, сколько корней еще предстоит найти!",
+    "rootsDescription": "Отслеживайте, сколько корней еще нужно найти!",
     "drawing": "Используйте ОДИН палец, чтобы управлять углом наклона луча и ДВА пальца, чтобы перемещать его по экрану! Для изменения масштаба используйсте двойное нажатие на левую / правую половину экрана.",
-    "hasComplexRoots": "Осторожно! Среди решений уравнения есть комплексные."
+    "hasComplexRoots": "Осторожно! Среди решений уравнения есть комплексные.",
+    "linkArticle": "Статья 'Extending Lill's method of 1867' от P.V. Bradford",
+    "linkVideo": "Видео с канала 'Mathologer'",
+    "linkWebsite": "Веб-страница с дополнительными материалами по теме"
 }
