added developed by

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -118,6 +118,10 @@
     "hasComplexRoots": "Be careful! This equation has complex roots.",    
     "@hasComplexRoots": {
         "description": ""
+    },
+    "author": "Developed by Alice P., 2024",
+    "@author": {
+        "description": ""
     }
 
 }
