--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -28,5 +28,6 @@
     "hasComplexRoots": "Осторожно! Среди решений уравнения есть комплексные.",
     "linkArticle": "Статья 'Extending Lill's method of 1867' от P.V. Bradford",
     "linkVideo": "Видео с канала 'Mathologer'",
-    "linkWebsite": "Веб-страница с дополнительными материалами по теме"
+    "linkWebsite": "Веб-страница с дополнительными материалами по теме",
+    "author": "Разработчик Alice P., 2024"
 }
